Fix not contrasted enough read more link

--- a/app/_assets/_scss/_components.content-post.scss
+++ b/app/_assets/_scss/_components.content-post.scss
@@ -115,7 +115,6 @@
         a {
             @extend .pe-;
             @extend %block-link;
-            color: $color-black;
         }
     }
 
